[package]
name = "algorithm_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.3"
gio = "0.14.3"
cairo-rs = "0.14.3"
gdk-pixbuf = "0.14.0"
rand = "0.8.5"
rand_core = "0.6.3"

# [profile.dev]
# opt-level = 3

[[bin]]
name = "main"
path = "src/main.rs"
